--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="blog-slider__content">
               <span class="blog-slider__code">26 December 2019</span>
               <div class="blog-slider__title">Nuvu Nenu Okatiaithe</div>
-              <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi? </div>
+              <div class="blog-slider__text">✨✨✨✨✨✨✨✨✨✨✨✨✨ </div>
               <a href="#" class="blog-slider__button"><i class='bx bx-play-circle'>Trailer</i></a>
               <a href="#" class="blog-slider__button">READ MORE</a>
             </div>
@@ -99,7 +99,7 @@
                 <div class="blog-slider__content">
                   <span class="blog-slider__code">Coming Soon</span>
                   <div class="blog-slider__title">Jagamerigina Satyam</div>
-                  <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi? </div>
+                  <div class="blog-slider__text">✨✨✨✨✨✨✨✨✨✨✨✨✨ </div>
                   <a href="#" class="blog-slider__button"><i class='bx bx-play-circle'>Trailer</i></a>
                   <a href="#" class="blog-slider__button">READ MORE</a>
                 </div>
