--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
                   <span class="blog-slider__code">Coming Soon</span>
                   <div class="blog-slider__title">Jagamerigina Satyam</div>
                   <div class="blog-slider__text">
-                    <di>Director:-</di><br>
-                    <wr>Writer:-</wr><br>
-                    <st>Topcast:-</st><br>
-                    <ra>Rating:-</ra> <br>
+                    <di>Director:-</di>
+                    <wr>Writer:-</wr>
+                    <st>Topcast:-</st>
+                    <ra>Rating:-</ra> 
                   </div>
                   <a href="#" class="blog-slider__button"><i class='bx bx-play-circle'>Trailer</i></a>
                   <a href="#" class="blog-slider__button">READ MORE</a>
