--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
   <footer>
     <p>&copy; 2025 All rights reserved <br> Amrutha_Sathyanarayana Creations.</p>
 
-    <li id="footer__social-item">
+    <div id="footer__social-item">
         <a href="https://www.instagram.com/asn_creations_1994/" ><i class='bx bxl-instagram footer__social-icon'></i>
         </a>
-    </li>
+    </div>
 
   </footer>
 </body>
